--- a/index.html
+++ b/index.html
@@ -1448,7 +1448,7 @@ function _applyLangToAll(lang) {
   }
   // ★ Tunnel button tooltip
   _updateTunnelBtnLang(lang);
-  // ★ Vérifier l'état du verrou (missions déjà accomplies via localStorage?)
+  // ★ Vérifier l'état du verrou (missions de la session courante)
   setTimeout(()=>_checkTunnelLock(), 100);
 }
 
@@ -3077,11 +3077,12 @@ const MISSIONS = {
   ],
 };
 
-let _missionsCompleted = new Set(JSON.parse(localStorage.getItem('kitt_missions')||'[]'));
+// ★ Missions remises à zéro à chaque session (pas de persistance inter-sessions)
+let _missionsCompleted = new Set();
 let _missionHudOpen = false;
 
 function _saveMissions() {
-  try{ localStorage.setItem('kitt_missions', JSON.stringify([..._missionsCompleted])); }catch(e){}
+  // Sessions indépendantes — pas de sauvegarde persistante
 }
 
 function _completeMission(id) {
