--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@ body::after{content:"";position:fixed;top:0;left:0;right:0;bottom:0;background:r
 #access-input::placeholder{color:#442200;letter-spacing:2px;font-size:11px;}
 #access-hint{font-size:9px;color:#442200;letter-spacing:2px;text-align:center;}
 #access-box.wrong{animation:wrongShake .4s ease;}
+@keyframes accessGranted{0%{box-shadow:0 0 0 rgba(0,255,102,0);border-color:#CC6600}50%{box-shadow:0 0 40px rgba(0,255,102,.7),inset 0 0 20px rgba(0,255,102,.1);border-color:#00ff66}100%{box-shadow:0 0 80px rgba(0,255,102,.3);border-color:#00ff66}}
+#access-box.granted{animation:accessGranted .8s ease forwards;border-color:#00ff66;}
+#access-screen.granted{background:rgba(0,5,0,.97);}
 
 /* ── MU-TH-UR 6000 INTRO ───────────────────────────────── */
 #mother-intro{
@@ -2689,6 +2692,8 @@ function runAccessScreen() {
     if (val === '1982') {
       // Accès accordé
       input.disabled = true;
+      box.classList.add('granted');
+      screen.classList.add('granted');
       const ok = document.createElement('div');
       ok.className = 'a-ok'; ok.textContent = '> ACCES ACCORDE. BIENVENUE.';
       log.appendChild(ok);
