fix: déplacer #kitt-vkb hors de .container (transform cassait position:fixed)

--- a/index.html
+++ b/index.html
@@ -931,9 +931,10 @@ body.kb-open{padding-bottom:222px;}
     <input id="cmd-input" type="text" placeholder="entrez une commande..." autocomplete="off" spellcheck="false" inputmode="none" readonly/>
   </div>
 
-  <!-- ── Clavier virtuel KITT (mobile uniquement) ── -->
-  <div id="kitt-vkb" aria-label="Clavier KITT" aria-hidden="true"></div>
 </div>
+
+<!-- ── Clavier virtuel KITT (mobile uniquement) — hors .container pour position:fixed correct ── -->
+<div id="kitt-vkb" aria-label="Clavier KITT" aria-hidden="true"></div>
 
 <!-- Modal -->
 <div id="modal" class="modal">
