Update command input to be editable
Removed 'readonly' attribute from command input.

--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@ body.kb-open{padding-bottom:222px;}
 
   <div class="input-row">
     <span class="prompt-lbl">KITT&gt;</span>
-    <input id="cmd-input" type="text" placeholder="entrez une commande..." autocomplete="off" spellcheck="false" inputmode="none" readonly/>
+   <input id="cmd-input" type="text" placeholder="entrez une commande..." autocomplete="off" spellcheck="false"/>
   </div>
 
 </div>
