--- a/index.html
+++ b/index.html
@@ -780,6 +780,7 @@ body.kb-open{padding-bottom:222px;}
 #kitt-vkb.theme-mother .kb-shift-on{background:#131000;border-color:#504400;color:#ffaa33;}
 @media(min-width:601px){#kitt-vkb{display:none !important;}}
 </style>
+<style>/* GEMINI KITT ULTIMATE OVERRIDE */ :root { --k-red: #ff0000; --k-glow: rgba(255, 0, 0, 0.7); --k-bg: #000000; } body { background: var(--k-bg) !important; color: #fff !important; } .header h1 { color: var(--k-red) !important; text-shadow: 0 0 15px var(--k-glow), 0 0 30px var(--k-glow) !important; letter-spacing: 12px !important; } .scanner { border: 1px solid var(--k-red) !important; box-shadow: 0 0 20px var(--k-glow) !important; background: #110000 !important; } .scanner-head { background: var(--k-red) !important; box-shadow: 0 0 15px var(--k-red) !important; } button { border: 2px solid var(--k-red) !important; background: rgba(30,0,0,0.9) !important; color: var(--k-red) !important; box-shadow: 0 0 5px var(--k-glow) !important; transition: 0.3s !important; } button:hover { background: var(--k-red) !important; color: #000 !important; box-shadow: 0 0 25px var(--k-red) !important; } .chat-area, .terminal, #chat { background: rgba(0,0,0,0.9) !important; border-color: var(--k-red) !important; box-shadow: inset 0 0 20px var(--k-glow) !important; } input { border-bottom: 2px solid var(--k-red) !important; background: transparent !important; color: #ffcccc !important; }</style>
 </head>
 <body>
 
